# openssh-shim-wsl2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HISTORY.md  README.md  TODO.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  RELEASE.md
src/: config.rs  debug.rs  env.rs  errors.rs  launcher.rs  lib.rs  login_shell.rs  openssh_args.rs  path_convert.rs  shell_quote.rs  tool.rs  wsl.rs
tests/: smoke_test.ps1
